# instagram-httpx-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIXES_SUMMARY.md  OPTIMIZATIONS_SUMMARY.md  README.md  TOOL_TEST_REPORT.md  docker-compose.yml  install.sh  manifest.json  pyproject.toml
docs/: CDP_MODE.md  GEMINI_ANALYSIS.md  GEMINI_REEL_ANALYSIS.md  KNOWN_LIMITATIONS.md  MCP_SETUP.md  REEL_TRANSCRIPTION_INVESTIGATION.md  REEL_TRANSCRIPTION_PLAN.md  TRANSCRIPTION.md
docs/plans/: 2026-04-02-brave-cdp-direct-connection.md  2026-04-02-fix-cdp-default-and-ai-agent-compatibility.md
instagram_mcp_server/: __init__.py  __main__.py  authentication.py  bootstrap.py  callbacks.py  cli_main.py  constants.py  cookie_import.py  debug_trace.py  debug_utils.py  dependencies.py  error_diagnostics.py  error_handler.py  exceptions.py  logging_config.py  server.py  session_state.py  setup.py
instagram_mcp_server/config/: __init__.py  loaders.py  schema.py
instagram_mcp_server/core/: __init__.py  auth.py  browser.py  exceptions.py  utils.py
instagram_mcp_server/drivers/: __init__.py  brave_cdp.py  browser.py
instagram_mcp_server/media/: __init__.py  downloader.py  processor.py
instagram_mcp_server/scraping/: __init__.py  api_client.py  connection.py  extractor.py  fields.py  link_metadata.py  text_utils.py
instagram_mcp_server/scripts/: __init__.py  launch_brave.py
instagram_mcp_server/tools/: __init__.py  actions.py  apex_transcriber.py  gemini_analysis.py  insights.py  messaging.py  posts.py  search.py  transcription.py  user.py
instagram_mcp_server/utils/: __init__.py
tests/: conftest.py  test_authentication.py  test_bootstrap.py  test_brave_cdp.py  test_browser_driver.py  test_browser_security.py  test_cli_main.py  test_config.py  test_core_auth.py  test_core_browser.py  test_core_utils.py  test_debug_trace.py  test_dependencies.py  test_error_diagnostics.py  test_error_handler.py  test_exceptions.py  test_fields.py  test_link_metadata.py  test_logging_config.py  test_scraping.py  test_server.py  test_session_state.py  test_setup.py  test_tools.py
