[project]
name = "instagram-scraper-mcp"
version = "1.0.0"
description = "MCP server for Instagram profile, posts, insights, and messaging with Claude AI integration. Supports user profiles, Business/Creator insights, search, DMs, and account actions via web scraping."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Ishan Patel", email = "ishan@example.com" }
]
license = "Apache-2.0"
keywords = [
    "instagram",
    "mcp",
    "model-context-protocol",
    "scraper",
    "ai",
    "automation",
    "llm",
    "anthropic",
    "claude",
    "social-media",
    "instagram-insights",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.0.0",
    "inquirer>=3.4.0",
    "patchright>=1.40.0",
    "python-dotenv>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/stickerdaniel/instagram-mcp-server"
Documentation = "https://github.com/stickerdaniel/instagram-mcp-server#readme"
Repository = "https://github.com/stickerdaniel/instagram-mcp-server"
Issues = "https://github.com/stickerdaniel/instagram-mcp-server/issues"
Changelog = "https://github.com/stickerdaniel/instagram-mcp-server/releases"

[project.scripts]
instagram-mcp-server = "instagram_mcp_server.cli_main:main"
instagram-scraper-mcp = "instagram_mcp_server.cli_main:main"
instagram-launch-brave = "instagram_mcp_server.scripts.launch_brave:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["instagram_mcp_server*"]
exclude = ["assets*", "docs*", "tests*"]

[tool.setuptools.package-data]
instagram_mcp_server = ["py.typed"]

[dependency-groups]
dev = [
    "aiohttp>=3.12.13",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.11",
    "ty>=0.0.1a12",
]
